# autostac

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
docker/: Dockerfile
src/: catalog.rs  handlers.rs  main.rs  raster.rs  stac.rs  tiles.rs  transform.rs
