[package]
name = "rs2"
version = "0.1.0"
authors = ["Steve Hillier <stephenhillier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
gdal = "0.8.0"
geo = "0.18.0"
geo-booleanop = "0.3.2"
geo-types = "0.7.2"
geojson = { version =  "0.22.2", features=["geo-types"] }
itertools = "0.10.1"
proj = { version = "0.22.0", features=["geo-types"] }
rayon = "1.5.1"
rocket = "0.5.0-rc.1"
serde = "1.0.126"
serde_json = "1.0.64"
tile-grid = "0.3.0"
